@@ -1,0 +1,22 @@
+{
+    "search_request": {
+        "fields" : ["url", "title", "content", "rndlang"],
+        "query" : {
+            "match" : {
+              "_all" : "data mining" 
+            }
+        },
+        "size": 100
+    },
+
+    "query_hint": "data mining",
+    "field_mapping": {
+        "title"   : ["fields.title"],
+        "content" : ["fields.content"],
+        "language": ["fields.rndlang"]
+    },
+    "algorithm": "lingo",
+    "attributes": {
+        "MultilingualClustering.languageAggregationStrategy": "FLATTEN_NONE"
+    }
+}
